<resources>
    <string name="app_name">CryptoMobileApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="enter_nic">Enter Your NIC Number</string>
    <string name="extracted_phone">Automatically Extracted Phone Number </string>
    <string name="check_email">Check Your Email/Messages</string>
    <string name="secret_resend">Please Wait 30s to Request a Resend</string>
    <string name="secret_resend_msg">Please Wait 30s to Request a Resend</string>
    <string name="submit">Submit</string>
    <string name="resend">Resend</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login_code">Enter the Secret Login Code</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="receive_otp">A OTP will be sent your phone</string>
</resources>